--- a/package.json
+++ b/package.json
@@ -5,25 +5,31 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node src/assets/services/index.js"
   },
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.4",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "puppeteer": "^5.5.0",
+    "readline": "^1.3.0",
     "sass": "^1.32.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "material-design-icons-iconfont": "^6.1.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
