--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node src/assets/services/index.js"
+    "start": "node src/services/scrapePortada.js"
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "firebase": "^8.2.4",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "puppeteer": "^5.5.0",
+    "puppeteer": "^1.20.0",
     "readline": "^1.3.0",
     "sass": "^1.32.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "ws": "^6.1.4"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
